--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
 
-<body oncontextmenu="return (false);">
+<body>
     <div id="load" class="whole-window window-frame">
         <div id="loadingAnimation"></div>
         Loading...
@@ -49,8 +49,8 @@
                 <div id="description">
                     <b>RecursiveLaughter</b> is a new kind of Browser-Game. 
                     Because, <b>Everything</b> you see has been generated dynamically on your PC 
-                    and you can change <b>Everything</b> the way you want!<br>
-                    <p style="text-align: center; margin: 0.1em 0;"><b>- Literally, Everything! -</b></p>
+                    and can be changed as much as you want! <br>
+                    <b>Literally, Everything!</b>
                 </div>
             </div>
 
@@ -79,6 +79,10 @@
                     <a class="further-links" href="https://github.com/unrealGuthrie/rela"></a>
                     <a class="further-links" href="https://patreon.com/rela"></a>
                 </div>
+
+                <p class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.8em; margin-top: 1em;">or 
+                    <a class="selectable" style="color: #cdd6c4; font-weight: bolder; font-size: 0.9em; text-decoration: underline;">recursivelaughter@gmail.com</a>
+                </p>
             </div>
         </div>
     </div>
