--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
 
-<body>
+<body oncontextmenu = "return (false);">
     <div id="load" class="whole-window window-frame">
         <div id="loadingAnimation"></div>
         Loading...
@@ -80,8 +80,8 @@
                     <a class="further-links" href="https://patreon.com/rela"></a>
                 </div>
 
-                <p class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.8em; margin-top: 1em;">or 
-                    <a class="selectable" style="color: #cdd6c4; font-weight: bolder; font-size: 0.9em; text-decoration: underline;">recursivelaughter@gmail.com</a>
+                <p oncontextmenu="" class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.8em; margin-top: 1em;">or 
+                    <a href="mailto:recursivelaughter@gmail.com" class="selectable" style="color: #cdd6c4; font-weight: bolder; font-size: 0.9em; text-decoration: underline;">recursivelaughter@gmail.com</a>
                 </p>
             </div>
         </div>
