Setting Backgrounds Automatic

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 <p class="initial-menu-screens-title">Get in Contact!</p>
 
                 <div style="display: flex; justify-content: space-around;text-align: center; margin-top: 1em; margin-bottom: 0.5em;">
-                    <a class="further-links" href="https://discord.gg/b5Bum5E"></a>
-                    <a class="further-links" href="https://www.instagram.com/recursivelaughter/"></a>
-                    <a class="further-links" href="https://twitter.com/unreal_guthrie"></a>
-                    <a class="further-links" href="https://github.com/unrealGuthrie/rela"></a>
-                    <a class="further-links" href="https://patreon.com/rela"></a>
+                    <a id="furtherLink0" class="further-links" href="https://discord.gg/b5Bum5E"></a>
+                    <a id="furtherLink1" class="further-links" href="https://www.instagram.com/recursivelaughter/"></a>
+                    <a id="furtherLink2" class="further-links" href="https://twitter.com/unreal_guthrie"></a>
+                    <a id="furtherLink3" class="further-links" href="https://github.com/unrealGuthrie/rela"></a>
+                    <a id="furtherLink4" class="further-links" href="https://patreon.com/rela"></a>
                 </div>
 
                 <p oncontextmenu="" class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.95em; margin-top: 1em;">or
@@ -99,11 +99,11 @@
                 title="Menu (Esc)"></button>
 
             <div class="menu-buttons">
-                <button id="open_b" class="menu-button change-window-button" title="Inventory (E)">I</button>
-                <button id="open_c" class="menu-button change-window-button" title="Recipes (R)">R</button>
-                <button id="open_d" class="menu-button change-window-button" title="Constructions (C)">C</button>
-                <button id="open_e" class="menu-button change-window-button" title="Evolutions (F)">F</button>
-                <button id="open_f" class="menu-button change-window-button" title="Equipment (T)">T</button>
+                <button id="open_b" class="menu-button change-window-button" title="Inventory (E)"></button>
+                <button id="open_c" class="menu-button change-window-button" title="Recipes (R)"></button>
+                <button id="open_d" class="menu-button change-window-button" title="Constructions (C)"></button>
+                <button id="open_e" class="menu-button change-window-button" title="Evolutions (F)"></button>
+                <button id="open_f" class="menu-button change-window-button" title="Equipment (T)"></button>
             </div>
         </span>
 
