Introducing a new Statusbar

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
     <div id="game" class="whole-window window-frame">
         <header id="gameHeader"></header>
 
+        <div id="statusBar">
+            
+        </div>
+
         <canvas id="AnimationCanvas" class="whole-window window-frame"></canvas>
 
         <canvas id="EffectCanvas" class="whole-window window-frame"></canvas>
