--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <header id="gameHeader"></header>
 
         <div id="statusBar">
-            
+            <div id="healthBar"><span id="healthIcon"></span></div>
+            <div id="hungerBar"><span id="hungerIcon"></span></div>
         </div>
 
         <canvas id="AnimationCanvas" class="whole-window window-frame"></canvas>
