--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                 <div id="statusList">
                     <ul id="healthStatus" class="status-div">
                         <li id="healthIcon" class="status-icon-image"></li>
-                        <li id="healthBar" class="status-bar-outer" style="background-color: #ff9c9c; border: 1px solid #9c0000;">
+                        <li id="healthBar" class="status-bar-outer" style="background-color: #ff9c9c;">
                             <span id="healthBarValue" class="status-bar-inner" style="background-color: #ff0404;"></span>
                         </li>
                     </ul>
                     <ul id="hungerStatus" class="status-div">
                         <li id="hungerIcon" class="status-icon-image"></li>
-                        <li id="hungerBar" class="status-bar-outer" style="background-color: #79ff79; border: 1px solid green;">
+                        <li id="hungerBar" class="status-bar-outer" style="background-color: #79ff79;">
                                 <span id="hungerBarValue" class="status-bar-inner" style="background-color: #00b700;"></span>
                         </li>
                     </ul>
