--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@
                 <p class="initial-menu-screens-title">Get in Contact!</p>
 
                 <div style="display: flex; justify-content: space-around;text-align: center; margin-top: 1em; margin-bottom: 0.5em;">
-                    <a id="furtherLink0" class="further-links" href="https://discord.gg/b5Bum5E"></a>
-                    <a id="furtherLink1" class="further-links" href="https://www.instagram.com/recursivelaughter/"></a>
-                    <a id="furtherLink2" class="further-links" href="https://twitter.com/unreal_guthrie"></a>
-                    <a id="furtherLink3" class="further-links" href="https://github.com/unrealGuthrie/rela"></a>
-                    <a id="furtherLink4" class="further-links" href="https://patreon.com/rela"></a>
+                    <a id="furtherLink0" class="further-links" name="Discord" href="https://discord.gg/b5Bum5E"></a>
+                    <a id="furtherLink1" class="further-links" name="Instagram" href="https://www.instagram.com/recursivelaughter/"></a>
+                    <a id="furtherLink2" class="further-links" name="Twitter" href="https://twitter.com/unreal_guthrie"></a>
+                    <a id="furtherLink3" class="further-links" name="Github" href="https://github.com/unrealGuthrie/rela"></a>
+                    <a id="furtherLink4" class="further-links" name="Patreon" href="https://patreon.com/rela"></a>
                 </div>
 
-                <p oncontextmenu="" class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.95em; margin-top: 1em;">or
-                    <a id="emailLink" href="mailto:recursivelaughter@gmail.com" class="selectable">recursivelaughter@gmail.com</a>
+                <p oncontextmenu="" class="selectable" style="color: #cdd6c4; font-family: Courier, monospace; font-size: 0.95em; margin-top: 1em;">
+                    <p id="emailLinkLine" style="display: block;">or <a id="emailLink" href="mailto:recursivelaughter@gmail.com" class="selectable">recursivelaughter@gmail.com</a></p>
+                    <p id="showServiceLink" style="display: block;"></p>
                 </p>
             </div>
         </div>
